Python/Entrega_Final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON a_vars a_funcs MAIN_COURSE body ENDING
Rule 2     a_vars -> empty
Rule 3     a_vars -> vars
Rule 4     vars -> MY_VARS ID COLON type SEMICOLON list_vars
Rule 5     list_vars -> empty
Rule 6     list_vars -> ID COLON type SEMICOLON list_vars
Rule 7     type -> INT
Rule 8     type -> FLOAT
Rule 9     body -> LBRACE list_statements RBRACE
Rule 10    list_statements -> statement body_rep
Rule 11    list_statements -> empty
Rule 12    list_statements -> statement
Rule 13    body_rep -> statement body_rep
Rule 14    body_rep -> statement
Rule 15    statement -> assign
Rule 16    statement -> condition
Rule 17    statement -> do_cycle
Rule 18    statement -> cycle
Rule 19    statement -> f_call
Rule 20    statement -> print_statement
Rule 21    print_statement -> PRINT LPAREN list_expresion RPAREN SEMICOLON
Rule 22    assign -> ID add_operand EQUALS add_operador expresion SEMICOLON
Rule 23    add_operand -> <empty>
Rule 24    add_operador -> <empty>
Rule 25    list_expresion -> expresion addPrint
Rule 26    list_expresion -> expresion addPrint COMMA list_expresion
Rule 27    list_expresion -> CTE_STRING addPrintString
Rule 28    list_expresion -> CTE_STRING addPrintString COMMA list_expresion
Rule 29    addPrint -> <empty>
Rule 30    addPrintString -> <empty>
Rule 31    do_cycle -> DO cycle_start body WHILE LPAREN expresion RPAREN goto_true SEMICOLON
Rule 32    cycle -> WHILE cycle_start LPAREN expresion RPAREN generate_gotof body generate_goto finish_gotof SEMICOLON
Rule 33    generate_gotof -> <empty>
Rule 34    generate_goto -> <empty>
Rule 35    finish_gotof -> <empty>
Rule 36    cycle_start -> <empty>
Rule 37    goto_true -> <empty>
Rule 38    condition -> IF LPAREN expresion RPAREN goto_false body else_part SEMICOLON
Rule 39    goto_false -> <empty>
Rule 40    else_part -> ELSE goto body
Rule 41    else_part -> empty
Rule 42    goto -> <empty>
Rule 43    expresion -> exp comparar_exp exp
Rule 44    expresion -> exp
Rule 45    comparar_exp -> LT
Rule 46    comparar_exp -> GT
Rule 47    comparar_exp -> NE
Rule 48    exp -> termino add_termino
Rule 49    exp -> termino add_termino next_termino
Rule 50    add_termino -> <empty>
Rule 51    next_termino -> sum_rest exp
Rule 52    sum_rest -> PLUS
Rule 53    sum_rest -> MINUS
Rule 54    termino -> factor add_factor next_factor
Rule 55    termino -> factor add_factor
Rule 56    next_factor -> mult_div termino
Rule 57    mult_div -> TIMES
Rule 58    mult_div -> DIVIDE
Rule 59    factor -> LPAREN expresion RPAREN
Rule 60    factor -> id_cte
Rule 61    add_factor -> <empty>
Rule 62    id_cte -> ID push_var
Rule 63    id_cte -> cte push_const
Rule 64    push_const -> <empty>
Rule 65    push_var -> <empty>
Rule 66    cte -> CTE_INT
Rule 67    cte -> CTE_FLOAT
Rule 68    funcs -> VOID ID LPAREN list_params RPAREN LBRACE var_no_var body RBRACE SEMICOLON
Rule 69    a_funcs -> empty
Rule 70    a_funcs -> funcs b_funcs
Rule 71    b_funcs -> funcs b_funcs
Rule 72    b_funcs -> funcs
Rule 73    list_params -> empty
Rule 74    list_params -> ID COLON type more_params
Rule 75    more_params -> empty
Rule 76    more_params -> COMMA ID COLON type more_params
Rule 77    var_no_var -> empty
Rule 78    var_no_var -> vars
Rule 79    f_call -> ID LPAREN RPAREN SEMICOLON
Rule 80    empty -> <empty>

Terminals, with rules where they appear

COLON                : 4 6 74 76
COMMA                : 26 28 76
CTE_FLOAT            : 67
CTE_INT              : 66
CTE_STRING           : 27 28
DIVIDE               : 58
DO                   : 31
ELSE                 : 40
ENDING               : 1
EQUALS               : 22
FLOAT                : 8
GT                   : 46
ID                   : 1 4 6 22 62 68 74 76 79
IF                   : 38
INT                  : 7
LBRACE               : 9 68
LPAREN               : 21 31 32 38 59 68 79
LT                   : 45
MAIN_COURSE          : 1
MINUS                : 53
MY_VARS              : 4
NE                   : 47
PLUS                 : 52
PRINT                : 21
PROGRAM              : 1
RBRACE               : 9 68
RPAREN               : 21 31 32 38 59 68 79
SEMICOLON            : 1 4 6 21 22 31 32 38 68 79
TIMES                : 57
VOID                 : 68
WHILE                : 31 32
error                : 

Nonterminals, with rules where they appear

a_funcs              : 1
a_vars               : 1
addPrint             : 25 26
addPrintString       : 27 28
add_factor           : 54 55
add_operador         : 22
add_operand          : 22
add_termino          : 48 49
assign               : 15
b_funcs              : 70 71
body                 : 1 31 32 38 40 68
body_rep             : 10 13
comparar_exp         : 43
condition            : 16
cte                  : 63
cycle                : 18
cycle_start          : 31 32
do_cycle             : 17
else_part            : 38
empty                : 2 5 11 41 69 73 75 77
exp                  : 43 43 44 51
expresion            : 22 25 26 31 32 38 59
f_call               : 19
factor               : 54 55
finish_gotof         : 32
funcs                : 70 71 72
generate_goto        : 32
generate_gotof       : 32
goto                 : 40
goto_false           : 38
goto_true            : 31
id_cte               : 60
list_expresion       : 21 26 28
list_params          : 68
list_statements      : 9
list_vars            : 4 6
more_params          : 74 76
mult_div             : 56
next_factor          : 54
next_termino         : 49
print_statement      : 20
program              : 0
push_const           : 63
push_var             : 62
statement            : 10 12 13 14
sum_rest             : 51
termino              : 48 49 56
type                 : 4 6 74 76
var_no_var           : 68
vars                 : 3 78

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON a_vars a_funcs MAIN_COURSE body ENDING

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON a_vars a_funcs MAIN_COURSE body ENDING

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON a_vars a_funcs MAIN_COURSE body ENDING

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . a_vars a_funcs MAIN_COURSE body ENDING
    (2) a_vars -> . empty
    (3) a_vars -> . vars
    (80) empty -> .
    (4) vars -> . MY_VARS ID COLON type SEMICOLON list_vars

    VOID            reduce using rule 80 (empty -> .)
    MAIN_COURSE     reduce using rule 80 (empty -> .)
    MY_VARS         shift and go to state 8

    a_vars                         shift and go to state 5
    empty                          shift and go to state 6
    vars                           shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON a_vars . a_funcs MAIN_COURSE body ENDING
    (69) a_funcs -> . empty
    (70) a_funcs -> . funcs b_funcs
    (80) empty -> .
    (68) funcs -> . VOID ID LPAREN list_params RPAREN LBRACE var_no_var body RBRACE SEMICOLON

    MAIN_COURSE     reduce using rule 80 (empty -> .)
    VOID            shift and go to state 12

    a_funcs                        shift and go to state 9
    empty                          shift and go to state 10
    funcs                          shift and go to state 11

state 6

    (2) a_vars -> empty .

    VOID            reduce using rule 2 (a_vars -> empty .)
    MAIN_COURSE     reduce using rule 2 (a_vars -> empty .)


state 7

    (3) a_vars -> vars .

    VOID            reduce using rule 3 (a_vars -> vars .)
    MAIN_COURSE     reduce using rule 3 (a_vars -> vars .)


state 8

    (4) vars -> MY_VARS . ID COLON type SEMICOLON list_vars

    ID              shift and go to state 13


state 9

    (1) program -> PROGRAM ID SEMICOLON a_vars a_funcs . MAIN_COURSE body ENDING

    MAIN_COURSE     shift and go to state 14


state 10

    (69) a_funcs -> empty .

    MAIN_COURSE     reduce using rule 69 (a_funcs -> empty .)


state 11

    (70) a_funcs -> funcs . b_funcs
    (71) b_funcs -> . funcs b_funcs
    (72) b_funcs -> . funcs
    (68) funcs -> . VOID ID LPAREN list_params RPAREN LBRACE var_no_var body RBRACE SEMICOLON

    VOID            shift and go to state 12

    funcs                          shift and go to state 15
    b_funcs                        shift and go to state 16

state 12

    (68) funcs -> VOID . ID LPAREN list_params RPAREN LBRACE var_no_var body RBRACE SEMICOLON

    ID              shift and go to state 17


state 13

    (4) vars -> MY_VARS ID . COLON type SEMICOLON list_vars

    COLON           shift and go to state 18


state 14

    (1) program -> PROGRAM ID SEMICOLON a_vars a_funcs MAIN_COURSE . body ENDING
    (9) body -> . LBRACE list_statements RBRACE

    LBRACE          shift and go to state 20

    body                           shift and go to state 19

state 15

    (71) b_funcs -> funcs . b_funcs
    (72) b_funcs -> funcs .
    (71) b_funcs -> . funcs b_funcs
    (72) b_funcs -> . funcs
    (68) funcs -> . VOID ID LPAREN list_params RPAREN LBRACE var_no_var body RBRACE SEMICOLON

    MAIN_COURSE     reduce using rule 72 (b_funcs -> funcs .)
    VOID            shift and go to state 12

    funcs                          shift and go to state 15
    b_funcs                        shift and go to state 21

state 16

    (70) a_funcs -> funcs b_funcs .

    MAIN_COURSE     reduce using rule 70 (a_funcs -> funcs b_funcs .)


state 17

    (68) funcs -> VOID ID . LPAREN list_params RPAREN LBRACE var_no_var body RBRACE SEMICOLON

    LPAREN          shift and go to state 22


state 18

    (4) vars -> MY_VARS ID COLON . type SEMICOLON list_vars
    (7) type -> . INT
    (8) type -> . FLOAT

    INT             shift and go to state 24
    FLOAT           shift and go to state 25

    type                           shift and go to state 23

state 19

    (1) program -> PROGRAM ID SEMICOLON a_vars a_funcs MAIN_COURSE body . ENDING

    ENDING          shift and go to state 26


state 20

    (9) body -> LBRACE . list_statements RBRACE
    (10) list_statements -> . statement body_rep
    (11) list_statements -> . empty
    (12) list_statements -> . statement
    (15) statement -> . assign
    (16) statement -> . condition
    (17) statement -> . do_cycle
    (18) statement -> . cycle
    (19) statement -> . f_call
    (20) statement -> . print_statement
    (80) empty -> .
    (22) assign -> . ID add_operand EQUALS add_operador expresion SEMICOLON
    (38) condition -> . IF LPAREN expresion RPAREN goto_false body else_part SEMICOLON
    (31) do_cycle -> . DO cycle_start body WHILE LPAREN expresion RPAREN goto_true SEMICOLON
    (32) cycle -> . WHILE cycle_start LPAREN expresion RPAREN generate_gotof body generate_goto finish_gotof SEMICOLON
    (79) f_call -> . ID LPAREN RPAREN SEMICOLON
    (21) print_statement -> . PRINT LPAREN list_expresion RPAREN SEMICOLON

    RBRACE          reduce using rule 80 (empty -> .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    DO              shift and go to state 38
    WHILE           shift and go to state 39
    PRINT           shift and go to state 40

    list_statements                shift and go to state 27
    statement                      shift and go to state 28
    empty                          shift and go to state 29
    assign                         shift and go to state 30
    condition                      shift and go to state 31
    do_cycle                       shift and go to state 32
    cycle                          shift and go to state 33
    f_call                         shift and go to state 34
    print_statement                shift and go to state 35

state 21

    (71) b_funcs -> funcs b_funcs .

    MAIN_COURSE     reduce using rule 71 (b_funcs -> funcs b_funcs .)


state 22

    (68) funcs -> VOID ID LPAREN . list_params RPAREN LBRACE var_no_var body RBRACE SEMICOLON
    (73) list_params -> . empty
    (74) list_params -> . ID COLON type more_params
    (80) empty -> .

    ID              shift and go to state 41
    RPAREN          reduce using rule 80 (empty -> .)

    list_params                    shift and go to state 42
    empty                          shift and go to state 43

state 23

    (4) vars -> MY_VARS ID COLON type . SEMICOLON list_vars

    SEMICOLON       shift and go to state 44


state 24

    (7) type -> INT .

    SEMICOLON       reduce using rule 7 (type -> INT .)
    COMMA           reduce using rule 7 (type -> INT .)
    RPAREN          reduce using rule 7 (type -> INT .)


state 25

    (8) type -> FLOAT .

    SEMICOLON       reduce using rule 8 (type -> FLOAT .)
    COMMA           reduce using rule 8 (type -> FLOAT .)
    RPAREN          reduce using rule 8 (type -> FLOAT .)


state 26

    (1) program -> PROGRAM ID SEMICOLON a_vars a_funcs MAIN_COURSE body ENDING .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON a_vars a_funcs MAIN_COURSE body ENDING .)


state 27

    (9) body -> LBRACE list_statements . RBRACE

    RBRACE          shift and go to state 45


state 28

    (10) list_statements -> statement . body_rep
    (12) list_statements -> statement .
    (13) body_rep -> . statement body_rep
    (14) body_rep -> . statement
    (15) statement -> . assign
    (16) statement -> . condition
    (17) statement -> . do_cycle
    (18) statement -> . cycle
    (19) statement -> . f_call
    (20) statement -> . print_statement
    (22) assign -> . ID add_operand EQUALS add_operador expresion SEMICOLON
    (38) condition -> . IF LPAREN expresion RPAREN goto_false body else_part SEMICOLON
    (31) do_cycle -> . DO cycle_start body WHILE LPAREN expresion RPAREN goto_true SEMICOLON
    (32) cycle -> . WHILE cycle_start LPAREN expresion RPAREN generate_gotof body generate_goto finish_gotof SEMICOLON
    (79) f_call -> . ID LPAREN RPAREN SEMICOLON
    (21) print_statement -> . PRINT LPAREN list_expresion RPAREN SEMICOLON

    RBRACE          reduce using rule 12 (list_statements -> statement .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    DO              shift and go to state 38
    WHILE           shift and go to state 39
    PRINT           shift and go to state 40

    statement                      shift and go to state 46
    body_rep                       shift and go to state 47
    assign                         shift and go to state 30
    condition                      shift and go to state 31
    do_cycle                       shift and go to state 32
    cycle                          shift and go to state 33
    f_call                         shift and go to state 34
    print_statement                shift and go to state 35

state 29

    (11) list_statements -> empty .

    RBRACE          reduce using rule 11 (list_statements -> empty .)


state 30

    (15) statement -> assign .

    ID              reduce using rule 15 (statement -> assign .)
    IF              reduce using rule 15 (statement -> assign .)
    DO              reduce using rule 15 (statement -> assign .)
    WHILE           reduce using rule 15 (statement -> assign .)
    PRINT           reduce using rule 15 (statement -> assign .)
    RBRACE          reduce using rule 15 (statement -> assign .)


state 31

    (16) statement -> condition .

    ID              reduce using rule 16 (statement -> condition .)
    IF              reduce using rule 16 (statement -> condition .)
    DO              reduce using rule 16 (statement -> condition .)
    WHILE           reduce using rule 16 (statement -> condition .)
    PRINT           reduce using rule 16 (statement -> condition .)
    RBRACE          reduce using rule 16 (statement -> condition .)


state 32

    (17) statement -> do_cycle .

    ID              reduce using rule 17 (statement -> do_cycle .)
    IF              reduce using rule 17 (statement -> do_cycle .)
    DO              reduce using rule 17 (statement -> do_cycle .)
    WHILE           reduce using rule 17 (statement -> do_cycle .)
    PRINT           reduce using rule 17 (statement -> do_cycle .)
    RBRACE          reduce using rule 17 (statement -> do_cycle .)


state 33

    (18) statement -> cycle .

    ID              reduce using rule 18 (statement -> cycle .)
    IF              reduce using rule 18 (statement -> cycle .)
    DO              reduce using rule 18 (statement -> cycle .)
    WHILE           reduce using rule 18 (statement -> cycle .)
    PRINT           reduce using rule 18 (statement -> cycle .)
    RBRACE          reduce using rule 18 (statement -> cycle .)


state 34

    (19) statement -> f_call .

    ID              reduce using rule 19 (statement -> f_call .)
    IF              reduce using rule 19 (statement -> f_call .)
    DO              reduce using rule 19 (statement -> f_call .)
    WHILE           reduce using rule 19 (statement -> f_call .)
    PRINT           reduce using rule 19 (statement -> f_call .)
    RBRACE          reduce using rule 19 (statement -> f_call .)


state 35

    (20) statement -> print_statement .

    ID              reduce using rule 20 (statement -> print_statement .)
    IF              reduce using rule 20 (statement -> print_statement .)
    DO              reduce using rule 20 (statement -> print_statement .)
    WHILE           reduce using rule 20 (statement -> print_statement .)
    PRINT           reduce using rule 20 (statement -> print_statement .)
    RBRACE          reduce using rule 20 (statement -> print_statement .)


state 36

    (22) assign -> ID . add_operand EQUALS add_operador expresion SEMICOLON
    (79) f_call -> ID . LPAREN RPAREN SEMICOLON
    (23) add_operand -> .

    LPAREN          shift and go to state 49
    EQUALS          reduce using rule 23 (add_operand -> .)

    add_operand                    shift and go to state 48

state 37

    (38) condition -> IF . LPAREN expresion RPAREN goto_false body else_part SEMICOLON

    LPAREN          shift and go to state 50


state 38

    (31) do_cycle -> DO . cycle_start body WHILE LPAREN expresion RPAREN goto_true SEMICOLON
    (36) cycle_start -> .

    LBRACE          reduce using rule 36 (cycle_start -> .)

    cycle_start                    shift and go to state 51

state 39

    (32) cycle -> WHILE . cycle_start LPAREN expresion RPAREN generate_gotof body generate_goto finish_gotof SEMICOLON
    (36) cycle_start -> .

    LPAREN          reduce using rule 36 (cycle_start -> .)

    cycle_start                    shift and go to state 52

state 40

    (21) print_statement -> PRINT . LPAREN list_expresion RPAREN SEMICOLON

    LPAREN          shift and go to state 53


state 41

    (74) list_params -> ID . COLON type more_params

    COLON           shift and go to state 54


state 42

    (68) funcs -> VOID ID LPAREN list_params . RPAREN LBRACE var_no_var body RBRACE SEMICOLON

    RPAREN          shift and go to state 55


state 43

    (73) list_params -> empty .

    RPAREN          reduce using rule 73 (list_params -> empty .)


state 44

    (4) vars -> MY_VARS ID COLON type SEMICOLON . list_vars
    (5) list_vars -> . empty
    (6) list_vars -> . ID COLON type SEMICOLON list_vars
    (80) empty -> .

    ID              shift and go to state 56
    VOID            reduce using rule 80 (empty -> .)
    MAIN_COURSE     reduce using rule 80 (empty -> .)
    LBRACE          reduce using rule 80 (empty -> .)

    list_vars                      shift and go to state 57
    empty                          shift and go to state 58

state 45

    (9) body -> LBRACE list_statements RBRACE .

    ENDING          reduce using rule 9 (body -> LBRACE list_statements RBRACE .)
    WHILE           reduce using rule 9 (body -> LBRACE list_statements RBRACE .)
    RBRACE          reduce using rule 9 (body -> LBRACE list_statements RBRACE .)
    ELSE            reduce using rule 9 (body -> LBRACE list_statements RBRACE .)
    SEMICOLON       reduce using rule 9 (body -> LBRACE list_statements RBRACE .)


state 46

    (13) body_rep -> statement . body_rep
    (14) body_rep -> statement .
    (13) body_rep -> . statement body_rep
    (14) body_rep -> . statement
    (15) statement -> . assign
    (16) statement -> . condition
    (17) statement -> . do_cycle
    (18) statement -> . cycle
    (19) statement -> . f_call
    (20) statement -> . print_statement
    (22) assign -> . ID add_operand EQUALS add_operador expresion SEMICOLON
    (38) condition -> . IF LPAREN expresion RPAREN goto_false body else_part SEMICOLON
    (31) do_cycle -> . DO cycle_start body WHILE LPAREN expresion RPAREN goto_true SEMICOLON
    (32) cycle -> . WHILE cycle_start LPAREN expresion RPAREN generate_gotof body generate_goto finish_gotof SEMICOLON
    (79) f_call -> . ID LPAREN RPAREN SEMICOLON
    (21) print_statement -> . PRINT LPAREN list_expresion RPAREN SEMICOLON

    RBRACE          reduce using rule 14 (body_rep -> statement .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    DO              shift and go to state 38
    WHILE           shift and go to state 39
    PRINT           shift and go to state 40

    statement                      shift and go to state 46
    body_rep                       shift and go to state 59
    assign                         shift and go to state 30
    condition                      shift and go to state 31
    do_cycle                       shift and go to state 32
    cycle                          shift and go to state 33
    f_call                         shift and go to state 34
    print_statement                shift and go to state 35

state 47

    (10) list_statements -> statement body_rep .

    RBRACE          reduce using rule 10 (list_statements -> statement body_rep .)


state 48

    (22) assign -> ID add_operand . EQUALS add_operador expresion SEMICOLON

    EQUALS          shift and go to state 60


state 49

    (79) f_call -> ID LPAREN . RPAREN SEMICOLON

    RPAREN          shift and go to state 61


state 50

    (38) condition -> IF LPAREN . expresion RPAREN goto_false body else_part SEMICOLON
    (43) expresion -> . exp comparar_exp exp
    (44) expresion -> . exp
    (48) exp -> . termino add_termino
    (49) exp -> . termino add_termino next_termino
    (54) termino -> . factor add_factor next_factor
    (55) termino -> . factor add_factor
    (59) factor -> . LPAREN expresion RPAREN
    (60) factor -> . id_cte
    (62) id_cte -> . ID push_var
    (63) id_cte -> . cte push_const
    (66) cte -> . CTE_INT
    (67) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 62
    ID              shift and go to state 68
    CTE_INT         shift and go to state 70
    CTE_FLOAT       shift and go to state 71

    expresion                      shift and go to state 63
    exp                            shift and go to state 64
    termino                        shift and go to state 65
    factor                         shift and go to state 66
    id_cte                         shift and go to state 67
    cte                            shift and go to state 69

state 51

    (31) do_cycle -> DO cycle_start . body WHILE LPAREN expresion RPAREN goto_true SEMICOLON
    (9) body -> . LBRACE list_statements RBRACE

    LBRACE          shift and go to state 20

    body                           shift and go to state 72

state 52

    (32) cycle -> WHILE cycle_start . LPAREN expresion RPAREN generate_gotof body generate_goto finish_gotof SEMICOLON

    LPAREN          shift and go to state 73


state 53

    (21) print_statement -> PRINT LPAREN . list_expresion RPAREN SEMICOLON
    (25) list_expresion -> . expresion addPrint
    (26) list_expresion -> . expresion addPrint COMMA list_expresion
    (27) list_expresion -> . CTE_STRING addPrintString
    (28) list_expresion -> . CTE_STRING addPrintString COMMA list_expresion
    (43) expresion -> . exp comparar_exp exp
    (44) expresion -> . exp
    (48) exp -> . termino add_termino
    (49) exp -> . termino add_termino next_termino
    (54) termino -> . factor add_factor next_factor
    (55) termino -> . factor add_factor
    (59) factor -> . LPAREN expresion RPAREN
    (60) factor -> . id_cte
    (62) id_cte -> . ID push_var
    (63) id_cte -> . cte push_const
    (66) cte -> . CTE_INT
    (67) cte -> . CTE_FLOAT

    CTE_STRING      shift and go to state 76
    LPAREN          shift and go to state 62
    ID              shift and go to state 68
    CTE_INT         shift and go to state 70
    CTE_FLOAT       shift and go to state 71

    list_expresion                 shift and go to state 74
    expresion                      shift and go to state 75
    exp                            shift and go to state 64
    termino                        shift and go to state 65
    factor                         shift and go to state 66
    id_cte                         shift and go to state 67
    cte                            shift and go to state 69

state 54

    (74) list_params -> ID COLON . type more_params
    (7) type -> . INT
    (8) type -> . FLOAT

    INT             shift and go to state 24
    FLOAT           shift and go to state 25

    type                           shift and go to state 77

state 55

    (68) funcs -> VOID ID LPAREN list_params RPAREN . LBRACE var_no_var body RBRACE SEMICOLON

    LBRACE          shift and go to state 78


state 56

    (6) list_vars -> ID . COLON type SEMICOLON list_vars

    COLON           shift and go to state 79


state 57

    (4) vars -> MY_VARS ID COLON type SEMICOLON list_vars .
